--- a/bukusakuonline/src/main/res/layout/activity_main.xml
+++ b/bukusakuonline/src/main/res/layout/activity_main.xml
@@ -16,9 +16,10 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation_main"
         android:layout_width="match_parent"
+
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        android:background="#FFFDFD"
+        android:background="@drawable/border"
         app:layout_constraintEnd_toEndOf="parent"
         app:elevation="0dp"
         app:itemTextAppearanceActive="@style/BottomNavigationView.Active"
