--- a/bukusakuonline/src/main/res/layout/activity_splash_screen.xml
+++ b/bukusakuonline/src/main/res/layout/activity_splash_screen.xml
@@ -8,19 +8,33 @@
     tools:context=".ui.SplashScreenActivity">
 
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="210dp"
+        android:layout_height="201dp"
+        android:layout_marginStart="75dp"
+        android:layout_marginLeft="75dp"
+        android:layout_marginTop="128dp"
+        android:layout_marginEnd="74dp"
+        android:layout_marginRight="74dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/ic_launcher_foreground" />
+
     <TextView
         android:id="@+id/textView4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="307dp"
+        android:layout_marginTop="36dp"
+        android:gravity="center"
         android:text="Bukusaku"
         android:textAlignment="center"
-        android:gravity="center"
         android:textColor="@color/colorBgSplash"
         android:textSize="40dp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
         tools:layout_editor_absoluteX="0dp" />
 
     <TextView
