--- a/app/src/main/res/drawable/bg_center_nav_option.xml
+++ b/app/src/main/res/drawable/bg_center_nav_option.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#FF5151"/>
-    <stroke android:width="5dp" android:color="#fff"/>
+    <stroke android:width="5dp" android:color="#f8f8f8"/>
     <corners android:radius="50dp"/>
 </shape>
