--- a/app/src/main/res/layout-v16/fragment_dashboard.xml
+++ b/app/src/main/res/layout-v16/fragment_dashboard.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/colorbgPeraturan"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
         android:orientation="vertical"
