--- a/bukusakuonline/src/main/res/layout/fragment_home.xml
+++ b/bukusakuonline/src/main/res/layout/fragment_home.xml
@@ -105,7 +105,7 @@
                                 android:layout_width="match_parent"
                                 android:maxWidth="30dp"
                                 android:layout_height="wrap_content"
-                                android:text="Pengaturan Dan Pasal"
+                                android:text="Peraturan Dan Pasal"
                                 android:layout_margin="10dp"
                                 android:textSize="12sp"
                                 android:maxLines="2"
