--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -32,7 +32,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="41dp"
         android:layout_marginRight="41dp"
-        android:text="Bukusakuku adalah aplikasi monitoring siswa dalam"
+        android:text="Bukusaku adalah aplikasi monitoring siswa dalam"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
