--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -60,16 +60,18 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/roboto"
                 android:text="@string/fitur_buku_sakuku"
                 android:textColor="@color/colorHitam"
-                android:fontFamily="@font/roboto"
                 android:textSize="14sp"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginLeft="20dp"/>
+                app:fontFamily="@font/roboto_medium" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -93,7 +95,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_margin="10dp"
+                            android:layout_margin="14dp"
                             android:orientation="horizontal"
                             android:gravity="center">
                             <ImageView
@@ -105,7 +107,7 @@
                                 android:layout_width="match_parent"
                                 android:maxWidth="30dp"
                                 android:layout_height="wrap_content"
-                                android:text="Pengaturan Dan Pasal"
+                                android:text="Peraturan Dan Pasal"
                                 android:layout_margin="10dp"
                                 android:textSize="12sp"
                                 android:maxLines="2"
@@ -134,7 +136,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_margin="10dp"
+                            android:layout_margin="14dp"
                             android:orientation="horizontal"
                             android:gravity="center">
                             <ImageView
@@ -181,7 +183,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_margin="10dp"
+                            android:layout_margin="14dp"
                             android:orientation="horizontal"
                             android:gravity="center">
                             <ImageView
@@ -222,7 +224,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_margin="10dp"
+                            android:layout_margin="14dp"
                             android:orientation="horizontal"
                             android:gravity="center">
                             <ImageView
