--- a/bukusakuonline/src/main/res/layout-v21/fragment_profile.xml
+++ b/bukusakuonline/src/main/res/layout-v21/fragment_profile.xml
@@ -100,16 +100,16 @@
         android:layout_height="65dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="152dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
-        android:background="@drawable/green_button"
+        android:background="@drawable/red_button"
+
         android:text="@string/keluar"
         android:textAllCaps="false"
-        android:backgroundTint="#23B88E"
         android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view3" />
 
