--- a/app/src/main/res/layout-v21/fragment_profile.xml
+++ b/app/src/main/res/layout-v21/fragment_profile.xml
@@ -79,8 +79,8 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
-        android:background="@drawable/green_button"
-        android:backgroundTint="#23B88E"
+        android:background="@drawable/red_button"
+        android:backgroundTint="#FF5151"
         android:text="@string/keluar"
         android:textAllCaps="false"
         android:textColor="@color/colorWhite"
