--- a/app/src/main/res/layout-v16/fragment_dashboard.xml
+++ b/app/src/main/res/layout-v16/fragment_dashboard.xml
@@ -92,5 +92,8 @@
             android:id="@+id/dashboard_items"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="100dp" />
     </LinearLayout>
 </ScrollView>
