--- a/app/src/main/res/layout-v21/fragment_profile.xml
+++ b/app/src/main/res/layout-v21/fragment_profile.xml
@@ -25,7 +25,7 @@
         android:layout_height="150dp"
         android:layout_marginTop="12dp"
         android:contentDescription="@string/foto_profile"
-        tools:src="@drawable/profile"
+        tools:src="@drawable/masfiud"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
