--- a/bukusakuonline/src/main/res/layout-v21/fragment_profile.xml
+++ b/bukusakuonline/src/main/res/layout-v21/fragment_profile.xml
@@ -60,7 +60,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="12dp"
-        tools:src="@drawable/profile"
+        tools:src="@drawable/masfiud"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
