--- a/bukusakuonline/src/main/res/layout/activity_tentang_kami.xml
+++ b/bukusakuonline/src/main/res/layout/activity_tentang_kami.xml
@@ -11,7 +11,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <TextView
             android:id="@+id/textView10"
             android:layout_width="wrap_content"
@@ -20,7 +19,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="26dp"
             android:fontFamily="@font/roboto"
-            android:text="Created With Love By"
+            android:text="Created with love by"
             android:textColor="@android:color/black"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -109,10 +108,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="12dp"
+                        android:fontFamily="@font/roboto"
                         android:layout_marginLeft="12dp"
                         android:layout_marginTop="25dp"
                         android:textColor="#000000"
-                        android:textSize="20sp"
+                        android:textSize="18sp"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView25"
                         app:layout_constraintTop_toTopOf="parent"
                         android:text="@string/rayhan_rafiud_darojat" />
@@ -124,10 +124,11 @@
                         android:layout_marginStart="12dp"
                         android:layout_marginLeft="12dp"
                         android:layout_marginTop="8dp"
-                        android:textSize="16sp"
+                        android:fontFamily="@font/roboto"
+                        android:textSize="14sp"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView25"
                         app:layout_constraintTop_toBottomOf="@+id/textView55"
-                        android:text="Backend Dev &amp; UI/UX Designer" />
+                        android:text="Backend Developer &amp; UI/UX Designer" />
 
                     <View
                         android:layout_width="match_parent"
@@ -161,7 +162,8 @@
                         android:layout_marginLeft="12dp"
                         android:layout_marginTop="25dp"
                         android:textColor="#000000"
-                        android:textSize="20sp"
+                        android:textSize="18sp"
+                        android:fontFamily="@font/roboto"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView26"
                         app:layout_constraintTop_toTopOf="parent"
                         android:text="R. Samudra Gawang" />
@@ -173,10 +175,11 @@
                         android:layout_marginStart="12dp"
                         android:layout_marginLeft="12dp"
                         android:layout_marginTop="8dp"
-                        android:textSize="16sp"
+                        android:fontFamily="@font/roboto"
+                        android:textSize="14sp"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView26"
                         app:layout_constraintTop_toBottomOf="@+id/textView56"
-                        android:text="Android Dev &amp; Frontend Dev" />
+                        android:text="Android Developer &amp; Frontend Developer" />
 
                     <View
                         android:layout_width="match_parent"
@@ -209,7 +212,8 @@
                         android:layout_marginLeft="12dp"
                         android:layout_marginTop="25dp"
                         android:textColor="#000000"
-                        android:textSize="20sp"
+                        android:fontFamily="@font/roboto"
+                        android:textSize="18sp"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView27"
                         app:layout_constraintTop_toTopOf="parent"
                         android:text="Daffa Raihan Zaki" />
@@ -220,11 +224,12 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="12dp"
                         android:layout_marginLeft="12dp"
+                        android:fontFamily="@font/roboto"
                         android:layout_marginTop="8dp"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView27"
                         app:layout_constraintTop_toBottomOf="@+id/textView57"
-                        android:text="Frontend Dev" />
+                        android:text="Frontend Developer" />
 
                     <View
                         android:layout_width="match_parent"
@@ -257,7 +262,8 @@
                         android:layout_marginLeft="12dp"
                         android:layout_marginTop="25dp"
                         android:textColor="#000000"
-                        android:textSize="20sp"
+                        android:textSize="18sp"
+                        android:fontFamily="@font/roboto"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView28"
                         app:layout_constraintTop_toTopOf="parent"
                         android:text=" Fakhrul Zakaria" />
@@ -269,10 +275,11 @@
                         android:layout_marginStart="12dp"
                         android:layout_marginLeft="12dp"
                         android:layout_marginTop="8dp"
-                        android:textSize="16sp"
+                        android:fontFamily="@font/roboto"
+                        android:textSize="14sp"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView28"
                         app:layout_constraintTop_toBottomOf="@+id/textView58"
-                        android:text="Frontend Dev" />
+                        android:text="Frontend Developer" />
 
                     <View
                         android:layout_width="match_parent"
@@ -306,7 +313,8 @@
                         android:layout_marginLeft="12dp"
                         android:layout_marginTop="25dp"
                         android:textColor="#000000"
-                        android:textSize="20sp"
+                        android:textSize="18sp"
+                        android:fontFamily="@font/roboto"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView2"
                         app:layout_constraintTop_toTopOf="parent"
                         android:text="Faresa Prasetyo N" />
@@ -316,12 +324,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="12dp"
+                        android:fontFamily="@font/roboto"
                         android:layout_marginLeft="12dp"
                         android:layout_marginTop="8dp"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView2"
                         app:layout_constraintTop_toBottomOf="@+id/textView5"
-                        android:text="Android Dev" />
+                        android:text="Android Developer" />
 
                     <View
                         android:layout_width="match_parent"
@@ -353,8 +362,8 @@
                         android:layout_marginStart="12dp"
                         android:layout_marginLeft="12dp"
                         android:layout_marginTop="25dp"
-                        android:textColor="#000000"
-                        android:textSize="20sp"
+                        android:textColor="#000000"  android:fontFamily="@font/roboto"
+                        android:textSize="18sp"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView281"
                         app:layout_constraintTop_toTopOf="parent"
                         android:text="Sindy Lailasari" />
@@ -366,7 +375,8 @@
                         android:layout_marginStart="12dp"
                         android:layout_marginLeft="12dp"
                         android:layout_marginTop="8dp"
-                        android:textSize="16sp"
+                        android:fontFamily="@font/roboto"
+                        android:textSize="14sp"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView281"
                         app:layout_constraintTop_toBottomOf="@+id/textView581"
                         android:text="Ilustrator" />
@@ -402,7 +412,8 @@
                         android:layout_marginLeft="12dp"
                         android:layout_marginTop="25dp"
                         android:textColor="#000000"
-                        android:textSize="20sp"
+                        android:textSize="18sp"
+                        android:fontFamily="@font/roboto"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView22"
                         app:layout_constraintTop_toTopOf="parent"
                         android:text="Makhali Bagas" />
@@ -414,10 +425,11 @@
                         android:layout_marginStart="12dp"
                         android:layout_marginLeft="12dp"
                         android:layout_marginTop="8dp"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
+                        android:fontFamily="@font/roboto"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView22"
                         app:layout_constraintTop_toBottomOf="@+id/textView52"
-                        android:text="Android Dev" />
+                        android:text="Android Developer" />
 
                     <View
                         android:layout_width="match_parent"
@@ -450,11 +462,12 @@
                         android:layout_marginStart="12dp"
                         android:layout_marginLeft="12dp"
                         android:layout_marginTop="25dp"
+                        android:fontFamily="@font/roboto"
                         android:textColor="#000000"
-                        android:textSize="20sp"
+                        android:textSize="18sp"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView23"
                         app:layout_constraintTop_toTopOf="parent"
-                        android:text="Yudhan Ganteng" />
+                        android:text="Yudhan Jefri" />
 
                     <TextView
                         android:id="@+id/textView63"
@@ -463,10 +476,11 @@
                         android:layout_marginStart="12dp"
                         android:layout_marginLeft="12dp"
                         android:layout_marginTop="8dp"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
+                        android:fontFamily="@font/roboto"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView23"
                         app:layout_constraintTop_toBottomOf="@+id/textView53"
-                        android:text="Android Dev" />
+                        android:text="Android Developer" />
 
                     <View
                         android:layout_width="match_parent"
@@ -488,6 +502,7 @@
                         android:layout_height="80dp"
                         android:layout_margin="10dp"
                         android:src="@drawable/dafa"
+
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -500,10 +515,11 @@
                         android:layout_marginLeft="12dp"
                         android:layout_marginTop="25dp"
                         android:textColor="#000000"
-                        android:textSize="20sp"
+                        android:textSize="18sp"
+                        android:fontFamily="@font/roboto"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView24"
                         app:layout_constraintTop_toTopOf="parent"
-                        android:text="Daffa Pradipta" />
+                        android:text="Daffa Pradipa" />
 
                     <TextView
                         android:id="@+id/textView64"
@@ -512,10 +528,11 @@
                         android:layout_marginStart="12dp"
                         android:layout_marginLeft="12dp"
                         android:layout_marginTop="8dp"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
+                        android:fontFamily="@font/roboto"
                         app:layout_constraintStart_toEndOf="@+id/circleImageView24"
                         app:layout_constraintTop_toBottomOf="@+id/textView54"
-                        android:text="Android Dev"/>
+                        android:text="Android Developer"/>
 
                     <View
                         android:layout_width="match_parent"
@@ -528,5 +545,4 @@
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </ScrollView>
