--- a/bukusakuonline/src/main/res/layout-v21/fragment_profile.xml
+++ b/bukusakuonline/src/main/res/layout-v21/fragment_profile.xml
@@ -142,11 +142,12 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
-
             android:background="@drawable/red_button"
             android:text="@string/keluar"
+            android:layout_marginBottom="60dp"
             android:textAllCaps="false"
             android:textColor="@color/colorWhite"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
