--- a/bukusakuonline/src/main/res/layout-v21/activity_login.xml
+++ b/bukusakuonline/src/main/res/layout-v21/activity_login.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:paddingLeft="25dp"
-    android:paddingRight="25dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,57 +8,82 @@
     tools:context=".ui.LoginActivity">
     <LinearLayout
         android:orientation="vertical"
+        android:paddingLeft="25dp"
+        android:paddingRight="25dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView
-            android:textSize="36sp"
-            android:layout_marginTop="67dp"
+            android:textSize="28sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/masuk"
-            android:textStyle="bold" />
+            android:layout_marginTop="50dp"
+            android:textColor="@android:color/black"
+            android:fontFamily="@font/roboto_bold"/>
         <TextView
-            android:textColor="#C4C4C4"
-            android:textSize="18sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/masuk_untuk_melanjutkan"
-            />
-        <com.google.android.material.textfield.TextInputLayout
-            app:boxBackgroundColor="@color/colorWhite"
-            android:layout_marginTop="70dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txtEmail"
-                android:inputType="textEmailAddress"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/email" />
-        </com.google.android.material.textfield.TextInputLayout>
-        <com.google.android.material.textfield.TextInputLayout
-            app:boxBackgroundColor="@color/colorWhite"
-            android:layout_marginTop="30dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:passwordToggleEnabled="true">
+            android:text="Silahkan masuk untuk melanjutkan"
+            android:textSize="16sp"
+            android:fontFamily="@font/roboto_regular"
+            android:textColor="#C4C4C4"/>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txtPassword"
-                android:inputType="textPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/password" />
-        </com.google.android.material.textfield.TextInputLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Email"
+            android:textSize="12sp"
+            android:fontFamily="@font/roboto_regular"
+            android:textColor="#29293E"
+            android:layout_marginTop="50dp"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/border_button"
+            android:hint="Email"
+            android:id="@+id/txtEmail"
+            android:padding="10dp"
+            android:textSize="14sp"
+            android:fontFamily="@font/roboto_light"
+            android:drawableStart="@drawable/people"
+            android:drawablePadding="10dp"
+            android:layout_marginTop="10dp"
+            android:inputType="textEmailAddress"
+            android:drawableLeft="@drawable/people" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Password"
+            android:textSize="12sp"
+            android:fontFamily="@font/roboto_regular"
+            android:textColor="#29293E"
+            android:layout_marginTop="20dp"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:fontFamily="@font/roboto_light"
+            android:background="@drawable/border_button"
+            android:hint="Password"
+            android:drawableStart="@drawable/locked"
+            android:drawablePadding="10dp"
+            android:id="@+id/txtPassword"
+            android:padding="10dp"
+            android:layout_marginTop="10dp"
+            android:textSize="14sp"
+            android:inputType="textPassword"
+            android:drawableLeft="@drawable/locked" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnLogin"
             android:layout_marginTop="50dp"
-            android:textColor="#FFF"
+            android:textColor="@android:color/white"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:text="@string/masuk"
-            android:backgroundTint="#FF3E71"
+            android:fontFamily="@font/roboto_bold"
+            android:backgroundTint="@color/colorBgSplash"
             tools:targetApi="lollipop" />
     </LinearLayout>
+
 </ScrollView>
