--- a/bukusakuonline/src/main/res/layout/item_detail_pasal.xml
+++ b/bukusakuonline/src/main/res/layout/item_detail_pasal.xml
@@ -9,7 +9,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="wrap_content"
         app:cardCornerRadius="5dp"
         android:layout_margin="20dp"
         android:background="@drawable/border"
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:background="@drawable/border"
             android:layout_gravity="center">
             <androidx.cardview.widget.CardView
                 android:layout_width="50dp"
@@ -27,6 +28,7 @@
                 android:layout_marginEnd="32dp"
                 android:layout_marginRight="32dp"
                 android:layout_marginTop="25dp"
+                app:cardElevation="0dp"
                 app:cardBackgroundColor="@color/colorPrimary"
                 app:cardCornerRadius="7dp">
 
@@ -52,7 +54,8 @@
                 android:layout_marginRight="32dp"
                 android:fontFamily="@font/robotoligth"
                 android:text="@string/peraturan_item"
-                android:textSize="16sp" />
+                android:textSize="14sp"
+                android:layout_marginBottom="25dp"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
