--- a/bukusakuonline/src/main/res/values/colors.xml
+++ b/bukusakuonline/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#FF5151</color>
@@ -15,5 +15,8 @@
     <color name="colorbgPeraturan">#F8F8F8</color>
     <color name="colorbgBackgroundHome">#F3F4F7</color>
     <color name="background_point">#F3F4F7</color>
+    <color name="color_border" tools:ignore="MissingDefaultResource">#FCFCFC</color>
+    <color name="color_border2" tools:ignore="MissingDefaultResource">#C4C4C4</color>
+    <color name="text_color">#303030</color>
 
 </resources>
